--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -413,67 +413,59 @@
                 <target><![CDATA[
                     <ul>
                         <li>
-                            Kompisbyrån förmedlar kontakten mellan personer som är nya i Sverige med personer som har bott 
-                            i Sverige länge. Tanken är att ge dig möjlighet att träffa flera olika personer med annan 
-                            bakgrund än din egen, för att kunna skapa ett socialt nätverk.
+                            الفكرة هي مساعدتك على التواصل مع أشخاص اخرين من ثقافة مغايرة لثقافتك بهدف توسيع دائرة معارفك في مجتمعك الجديد.
                         </li>
                         <li>
-                            Kompisbyrån skapar kontakt mellan nya kompisar baserat på liknande intressen. 
+                            نحن نقوم بعملية المطابقة بشكل أساسي على أساس الاهتمامات المشتركة و هذا يعني أنه ممكن أن تتم المطابقة مع شخص من عمر مختلف أو جنس مختلف فإذا كان لديك شيء تريده أو تتمناه بهذا الخصوص الرجاء توضيح ذلك في طلبك لكي نحاول بدورنا تحقيق ذلك.
                         </li>
                         <li>
-                            Du måste kunna träffas i Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås 
-                            eller Örebro.
+                            يجب ان تكون قادرا على اللقاء في أحد المدن التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو ستوكهولم, أوميو أوبسالا, فيستروس و أوربرو. نحن نأمل أن نستطيع أن نربط أصدقا جدد في مناطق جديدة في المستقبل.
                         </li>
                         <li>
-                            Kompisbyrån ansvarar endast för att matcha ihop personer som har bott i Sverige under kortare tid med 
-                            personer som har bott i Sverige länge. 
+                            مسؤولية Kompisbyrån محصورة بفتح اتصال بين القدامى و الجدد في السويد.
                         </li>
                         <li>
-                            Utgångspunkten är att en kompisfika eller ett musikmöte med samma person sker en gång. Gillar ni 
-                            varandra får ni gärna träffas igen själva. Vill du träffa en ny fikakompis eller musikkompis, loggar 
-                            du in och gör en ny förfrågan. 
+                            نقطة البداية هي جلسة فيكا أو جلسة موسيقى مع الشخص الذي تمت معه المطابقة فإذا سارت الامور على ما يرام يمكنكم الاتفاق بانفسكم على لقاء جديد وإذا أردتم لقاء صديق جديد ما عليكم إلا تسجيل الدخول و التقدك بطلب جديد.
                         </li>
                         <li>
                             Alla över 18 år (myndiga) får delta.
                         </li>
                         <li>
-                            Du betalar bara för din egen fika, att registrera sig är gratis.
+                            التسجيل في الموقع و خدماته مجانية و لكن سوف تدفع ثمن الفيكا خاصتك عندما تخرج مع صديقك.
                         </li>
                         <li>
-                            Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del.
+                            نحن ننصح باللقاء في مكان عام لحوالي الساعة من الوقت في مركز المدينة الأقرب للطرفين.
                         </li>
                         <li>
-                            När du har registrerat din ansökan garanterar du att din information är korrekt och godkänner att 
-                            informationen; kan komma att behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan hitta 
-                            nya kompisar till dig, att din information och e-mail skickas till din nya kompis, och att vi bjuder in 
-                            dig till Kompisbyråns aktiviteter eller erbjudanden. Om du vill korrigera dina lämnade uppgifter som finns 
-                            registrerade hos oss, vänligen logga in med din e-mail och ditt lösenord och uppdatera din profil. 
-                            Personuppgiftsansvarig är Kompisbyråns styrelse.
+                            عند تسجيلك الدخول فإن طلبك يجب أن يضمن صحة المعلومات التي تقدمها و يضمن موافقتك على استخدام هذه المعلومات كي نجد لك رفيقا مناسبا ثم نرسل معلوماتك و بريدك الالكتروني الى رفيقك الجديد. أيضا سوف نقوم بدعوتك لمشاركتنا المشاطات الخاصة بنا. إذا كنت تريد تغيير أو تصحيح المعلومات الخاصة بك يمكنك فعل ذلك بتسجيل الدخول ببريدك الالكتروني و كلمة السر.
                         </li>
                         <li>
-                            Vår ambition är att hitta en ny kompis till dig inom 30 dagar, men det kan ta både kortare och längre tid 
-                            beroende på din profil och hur många personer som också vill träffa nya kompisar. Det innebär att du kan få vänta.
+                            طموحنا هو إيجاد رفيق جديد لك خلال 30 يوم من تقديمك للطلب. هذا يعني انه عليك الانتظار.
                         </li>
                         <li>
-                            När vi har tagit emot din ansökan, bekräftar vi detta genom att skicka ett e-mail till dig.
+                            عندما يصلنا طلبك نقوم بارسال بريد الكتروني لاعلامك بذلك.
                         </li>
                         <li>
-                            Du bör skicka ett e-mail till din nya fikakompis och bestämma när ni kan träffas inom 7 dagar.
+                            الرجاء احترام الطرف الاخر.... تذكر أن الغاء الموعد قد يكون اساءة للشخص الاخر الذي خطط للقاء رفيق جديد. يجب أن تكون متأكداأنك تريد القيام بذلك قبل أن تقوم بتسجيل الدخول.
                         </li>
                         <li>
-                            Du måste behandla alla på ett respektfullt sätt. Tänk på att vara tydliga mot varandra då 
-                            språkskillnader kan skapa missuppfattningar.
+                            الطرفان مسؤولان عن التواصل فيما بينهما خلال مدة أسبوع  من تلقيهما البريد الالكتروني المحتوي على معلومات المطابقة. يمكنكما لطفا تبادل أرقام الهواتف مما يسهل عملية التواصل و اللقاء.
                         </li>
                         <li>
-                            Om du vill avregistrera dig, skicka ett e-mail till kontakt@kompisbyran.se.
+                            يجب أن يتعامل الطرفان باحترام و  لا تنسوا أن فروفات اللغة تؤدي الى سوء تفاهم غير مقصود في بعض الأحيان.
                         </li>
                         <li>
-                            Kompisbyrån kan inte garantera att vi hittar en ny kompis till dig men vi gör alltid vårt bästa.
+                            إذا كنت تريد إلغاء اشتراكك لطفا ارسل بريدا الكترونيا الى kontakt@kompisbyran.se.
                         </li>
                         <li>
-                            Vi vill hela tiden bli bättre på vårt arbete. Därför skickar vi ett e-mail till dig efter att du har
-                            träffat din nya kompis för att fråga hur ert möte var.
+                            نحن لا نستطيع أن نضمن كليا أن نجد لك رفيقا جديدا لكن نحن نضمن لك أننا نفعل ما بوسعنا.
                         </li>
+                        <li>
+                            نحن نريد دوما أن نكون أفضل فيما نفعله لذلك سوف نرسل لك بريدا الكترونيا نسألك فيه كيف جرت الأمور و كيف كان اللقاء.
+                        </li>
+                        
+                        شاكرين لكم قراءتكم لشروطنا وموافقتكم عليها.
+                        
                     </ul>]]></target>
             </trans-unit>
             <trans-unit id="terms.outro">
