--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -487,8 +487,7 @@
                     <p>(This message will follow in English)<br /><br /></p>
                     <p>Hej!<br /></p>
                     <p>
-                        Tack för att du har anmält dig till en kompisfika via Kompisbyrån! Vi mailar dig när vi har hittat en ny Fikakompis som har liknande intressen som du. Vår ambition är att hitta en Fikakompis till dig inom 4 veckor, men det kan ta både kortare och längre tid beroende på din profil och hur många det är som också vill träffa nya Fikakompisar.<br /><br />
-                        Vi vill informera dig om att vi kommer gå ner i tempo nu under sommaren och är tillbaka i augusti i full kapacitet. Vi hoppas kunna hitta en bra matchning till dig snart, och vi hoppas att du vill vänta.
+                        Tack för att du har anmält dig till en kompisfika via Kompisbyrån! Vi mailar dig när vi har hittat en ny Fikakompis som har liknande intressen som du.
 
                         Om du har några frågor, vänligen skicka ett e-mail till oss :)
                     </p>
@@ -499,7 +498,7 @@
                     <p>----------------------<br /></p>
                     <p>
                         Thank you for making a Fika friend request through Kompisbyrån!<br /><br />
-                        We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have. Our ambition is to find a Fika friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Fika friends. We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.<br /><br />
+                        We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have.<br /><br />
                     </p>
                     <p>
                         Best regards,<br />
@@ -512,8 +511,7 @@
                 <target>
                     Hej!
 
-                    Tack för att du har anmält dig till en kompisfika via Kompisbyrån! Vi mailar dig när vi har hittat en ny Fikakompis som har liknande intressen som du. Vår ambition är att hitta en Fikakompis till dig inom 4 veckor, men det kan ta både kortare och längre tid beroende på din profil och hur många det är som också vill träffa nya Fikakompisar.
-                    Vi vill informera dig om att vi kommer gå ner i tempo nu under sommaren och är tillbaka i augusti i full kapacitet. Vi hoppas kunna hitta en bra matchning till dig snart, och vi hoppas att du vill vänta.
+                    Tack för att du har anmält dig till en kompisfika via Kompisbyrån! Vi mailar dig när vi har hittat en ny Fikakompis som har liknande intressen som du. 
                     
                     Om du har några frågor, vänligen skicka ett e-mail till oss :)
 
@@ -522,8 +520,7 @@
 
                     ----------------------
                         Thank you for making a Fika friend request through Kompisbyrån!
-                        We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have. Our ambition is to find a Fika friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Fika friends.
-                        We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.
+                        We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have. 
 
                         Best regards,
                         Kompisbyrån
@@ -541,9 +538,7 @@
                         <p>(This message will follow in English)<br /><br /></p>
                         <p>Hej!<br /></p>
                         <p>
-                          Tack för att du har anmält dig till Musikkompis! Vi mailar dig när vi har hittat en Musikkompis som passar just dig. Vår ambition är att hitta en Musikkompis till dig inom 4 veckor, men det kan ta både kortare och längre tid beroende på din profil och hur många det är som också vill träffa nya Musikkompisar.<br /><br />
-                            Vi vill informera dig om att vi kommer gå ner i tempo nu under sommaren och är tillbaka i augusti i full kapacitet. Vi hoppas kunna hitta en bra matchning till dig snart, och vi hoppas att du vill vänta.
-
+                          Tack för att du har anmält dig till Musikkompis! Vi mailar dig när vi har hittat en Musikkompis som passar just dig.
                             Om du har några frågor, vänligen skicka ett e-mail till oss :)
                         </p>
                         <p>
@@ -553,7 +548,7 @@
                         <p>----------------------<br /></p>
                         <p>
                             Thank you for making a Music friend request through Kompisbyrån!<br /><br />
-                            We will send you an e-mail as soon as we have found a new Music friend for you who has similar interests that you have. Our ambition is to find a Music friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Music friends. We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait. <br /><br />
+                            We will send you an e-mail as soon as we have found a new Music friend for you who has similar interests that you have.<br /><br />
                         </p>
                         <p>
                             Best regards,<br />
@@ -565,9 +560,8 @@
                 <source>user.friend.welcome.message.body.txt</source>
                 <target>
                     Thank you for making a Music friend request through Kompisbyrån!
-                    We will send you an e-mail as soon as we have found a Music friend for you. Our ambition is to find a friend for you within 2 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Music friends.
-                    We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.
-
+                    We will send you an e-mail as soon as we have found a Music friend for you.
+                    
                     If you have any questions, please send us an e-mail :)
 
                     Best regards,
@@ -656,7 +650,7 @@ Your friends at Kompisbyrån
             </trans-unit>
             <trans-unit id="page.how_it_works.header">
                 <source>page.how_it_works.header</source>
-                <target>Bli Fikakompis</target>
+                <target>أن تكون رفيق فيكا</target>
             </trans-unit>
             <trans-unit id="page.how_it_works.text">
                 <source>page.how_it_works.text</source>
@@ -675,20 +669,19 @@ Your friends at Kompisbyrån
                             svenska som modersmål eller motsvarande, har bott i Sverige under lång tid och kan lära ut svenska.
                         </p>
                         <p>
-                            Så här går det till:
+                            ...حسنا زز هذا ما عليك فعله
                         </p>
                         <p>
-                            1. Du registrerar dig. Tryck på "Bli Fikakompis"-knappen och följ instruktionerna, det är gratis att registrera sig.
-                            Du måste kunna träffas i Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås eller Örebro.
+                            1. ابدأ بفتح حساب: اضغط على زر (أكون رفيق فيكا) و اتبع التعليمات. هذ الامر مجاني... يجب ان تكون قادرا على اللقاء في أحد المدن التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو ستوكهولم, أوميو أوبسالا, فيستروس و أوربرو.
                         </p>
                         <p>
-                            2. Matchning. Vi skickar ett email till dig när vi har hittat en fikakompis som har liknande intressen som du har.
+                            2. التطابق : عند الوصول لاهتمامات مشتركة بين شخصين يتم ارسال بريد الكتروني لكلا الطرفين.
                         </p>
                         <p>
-                            3. Bestäm ett datum. Du skickar ett email till din fikakompis inom 7 dagar och bestämmer datum, tid och plats.
+                            3. قرر موعدا و قم بإرسال بريد الكتروني للطرف الاخر لتأكيد الموعد.
                         </p>
                         <p>
-                            4. Mötet. Ni träffas för att prata svenska på ett kafé eller annat offentligt ställe i cirka 1 timme.
+                            4. الموعد عادة جلسة لتناول القهوة و تبادل الحديث باللغة السويدية لمدة ساعة تقريبا.
                         </p>
                     ]]>
                 </target>
@@ -696,8 +689,7 @@ Your friends at Kompisbyrån
             <trans-unit id="page.how_it_works.well">
                 <source>page.how_it_works.well</source>
                 <target>
-                    Vi förmedlar första kontakten till en fikakompis som du träffar 1 gång (om ni inte kommer överens om
-                    annat). Vill du träffa en ny fikakompis, loggar du in och gör en ny förfrågan.
+                    نحن نقوم بذلك لمرة واحدة بعد تسجيلك الدخول و لكن بحال أردت أن تلتقي بصديق جديد عليك ان تقوم بتسجيل الدخول من جديد و التقدم بطلب جديد.
                 </target>
             </trans-unit>
             <trans-unit id="page.work_with_us.header">
